<resources>
    <string name="app_name">Coffee Meets Bagel</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_phone_number">Continue with phone number</string>
    <string name="terms_of_service_and_privacy_policy">Terms of Service and Privacy Policy</string>
    <string name="by_continuing_you_agree_to_our">By continuing you agree to our</string>
    <string name="there_s_someone_you_should_meet">There\'s someone you should meet.</string>
    <string name="privacy_terms"><![CDATA[Privacy & Terms]]></string>
    <string name="last_updated_october_6_2020">Last Updated: October 6, 2020</string>

    <!--EnterphonenotoSignu String-->
    <string name="whats_yout_number">Whats your number?</string>
    <string name="useno">we ll use this number to create your account</string>
    <string name="phno_91">+91</string>
    <string name="notetext">If youve logged in previously with Facebook</string>
    <string name="note">Note:</string>
    <string name="noteletter2">using this phone login will create new account</string>

    <!--otp page String-->
    <string name="otp_timing">Your code will be sent to </string>
    <string name="otp_timing_2ndlinee">sec.</string>
    <string name="rsend_code"> <u>Resend code</u></string>
    <string name="verify">Verify</string>

    <!--call us Cmb page-->
    <string name="Cmb">You can call us CMB,</string>
    <string name="whatisname">whats your name?</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="why">why?</string>

    <!--nice to meet page-->
    <string name="nicetomeet_text">Nice to meet you,<br />
    Siddhart.Whats your<br />
    email?</string>
    <string name="email">Email</string>

    <!--what are you looking for page-->
    <string name="lookingfor_text">Just between us,what <br />
        are you looking for?
    </string>
    <string name="marriage">Marriage</string>
    <string name="relationship">A committed relationship</string>
    <string name="casual">Something casual</string>
    <string name="notsur">Not sure yet</string>
    <string name="great_you_ll_fit_right_in_when_would_you_like_to_settle_down_ideally">Great, you\'ll fit right in! When would you like to settle down, ideally ?</string>
    <string name="just_between_us_what_are_you_looking_for">Just between us,what are you looking for?</string>
    <string name="a_commited_relationship">A commited relationship</string>
    <string name="something_casual">Something casual</string>
    <string name="not_sure_yet">Not sure yet</string>
    <string name="which_gender_do_you_identify_as">Which gender do you identify as?</string>
    <string name="i_m_a_women">I\'m a women</string>
    <string name="i_m_a_man">I\'m a man</string>
    <string name="add_my_location">Add my location</string>

    <!--cmb Daters page-->

    <string name="daters_Text">About 60% of CMB Daters<br />
                               are new to online dating,<br />
                               so you arent alone
    </string>

    <string name="daters_Text2">Lets start your profile<br />
                                together.A complete <br />
                                profile will help you stand<br />
                                out-and make you more<br />
                                likely to match
    </string>
    <string name="sounds_good">Sounds Good</string>

    <!--UploadPhotoToIntroduce yourself-->
    <string name="upload_text">Next,upload a few <br />
                          photos so we can<br />
                           introduce you</string>
    <string name="upload_text2">Upload a clear headshot as<br />
                             your first photo</string>
    <string name="upload_text3">Include a photo that shows<br />
                                what you love to do</string>
    <string name="upload_text4">No sunglasses or big hats,<br />
                                playing mesterious is out</string>
    <!--holdToReload page-->
    <string name="done">Done</string>
    <string name="hold_to_reorder_tap_to_edit">Hold to reorder.Tap to Edit</string>

    <!--Answering Question page-->
    <string name="answering_text">Looking good! Now <br />
                                  help us get to know<br />
                                   you a little better<br />
                                   by answering a few<br />
                                   questions.</string>
    <string name="how_tall_are_you">How tall are you?</string>
    <string name="_167cm">167cm</string>
    <string name="_169cm">169cm</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="daily_noon_alert">Daily Noon Alert</string>
    <string name="chats">Chats</string>
    <string name="customer_service">Customer Service</string>
    <string name="more_information">More Information</string>
    <string name="privacy_terms_of_services">Privacy terms of Services</string>
    <string name="licences">Licences</string>
    <string name="help">Help</string>
    <string name="mba">MBA</string>
    <string name="write_something">Write something...</string>
    <string name="e_g_investment_banker">e.g. Investment Banker</string>
    <string name="i_am_18_i_love_playing_casio">I am 18 ,i love playing casio.</string>
    <string name="_22_delhi">22, Delhi</string>
    <string name="study">Study</string>
    <string name="suggested">Suggested</string>
    <string name="do_you_live_around_here_lets_us_set_you_up_with_people_nearby_so_you_can_go_on_real_dates">Do you live around here? Lets us set you up with people nearby so you can go on real dates</string>
    <string name="next">Next</string>
    <string name="sorry_no_one_found_at_our_location_to_discover">Sorry! no one found at our location to discover.</string>
    <string name="asian">Asian</string>
    <string name="arab">Arab</string>
    <string name="pacific_islander">Pacific Islander</string>
    <string name="south_asian">South Asian</string>


</resources>