<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".callUsCMB">
    <TextView
        android:id="@+id/TvCmb_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/dp_100"
        android:text="@string/Cmb"
        android:textColor="@color/darkgrey"
        android:textSize="@dimen/sp_30"
        android:layout_marginLeft="@dimen/dp_30"/>
    <TextView
        android:id="@+id/TvCmb_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/TvCmb_1"
        app:layout_constraintLeft_toLeftOf="@id/TvCmb_1"

        android:text="@string/whatisname"
        android:textColor="@color/darkgrey"
        android:textSize="@dimen/sp_30"
        />

    <EditText
        android:id="@+id/EtvCmb_1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_80"
        android:layout_marginTop="@dimen/dp_35"
        android:background="@drawable/rectangleedittext"
        android:backgroundTint="@color/tinygrey"
        android:hint="@string/first_name"
        android:paddingLeft="@dimen/dp_25"
        android:paddingTop="@dimen/dp_25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TvCmb_2" />
    <View
        android:layout_marginLeft="@dimen/dp_25"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_2"
        app:layout_constraintTop_toBottomOf="@id/EtvCmb_1"
        app:layout_constraintLeft_toLeftOf="@id/EtvCmb_1"
        app:layout_constraintRight_toRightOf="@id/EtvCmb_1"
        android:layout_marginRight="@dimen/dp_25"
        android:background="@color/blacklight"/>

    <EditText
        android:id="@+id/EtvCmb_2"
        android:layout_width="340dp"
        android:layout_height="69dp"
        android:layout_marginTop="@dimen/dp_35"
        android:background="@drawable/rectangleedittext"
        android:backgroundTint="@color/tinygrey"
        android:hint="@string/last_name"
        android:paddingLeft="@dimen/dp_25"
        android:paddingTop="@dimen/dp_25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/EtvCmb_1" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_2"
        android:layout_marginLeft="@dimen/dp_25"
        android:background="@color/blacklight"

        app:layout_constraintLeft_toLeftOf="@id/EtvCmb_1"
        app:layout_constraintTop_toBottomOf="@id/EtvCmb_2" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/EtvCmb_2"
        app:layout_constraintRight_toRightOf="@id/EtvCmb_2"
        android:text="@string/why"
        android:layout_marginTop="@dimen/dp_25"
        android:textColor="@color/appBlue"
        android:textSize="@dimen/sp_25"
        android:paddingRight="@dimen/dp_15"/>

    <Button
        android:id="@+id/BtnCMB"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:layout_margin="@dimen/dp_25"
        android:background="@drawable/rectanglebutton"
        android:backgroundTint="@color/tinygrey"
        android:text="Next"
        android:textColor="@color/darkgrey"
        android:textSize="@dimen/sp_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EtvCmb_2"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>