<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnterPhoneNoToSignup">
    <!-- what is our phone Number page by Aditya Rout-->
    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:gravity="center"
        android:text="@string/whats_yout_number"
        android:textColor="@color/darkgrey"
        android:textSize="@dimen/sp_25"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

    <ImageView
        android:id="@+id/backToPrevious"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_35"
        android:contentDescription="TODO"
        android:padding="@dimen/dp_10"
        android:src="@drawable/ic_backbutton_"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_35"
        android:layout_marginRight="@dimen/dp_15"
        android:padding="@dimen/dp_10"
        android:src="@drawable/ic_right_arrow"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:gravity="center"
        android:text="@string/useno"
        android:textColor="#868794"

        android:textSize="@dimen/sp_15"

        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv1" />

    <TextView
        android:id="@+id/rect1"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_50"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="@dimen/dp_25"
        android:background="@drawable/rectangle"
        android:drawableLeft="@drawable/ic_india"
        android:drawableRight="@drawable/ic_down_arrow"
        android:drawablePadding="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_10"
        android:paddingTop="@dimen/dp_15"
        android:paddingRight="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_15"
        android:text="@string/phno_91"
        app:layout_constraintLeft_toLeftOf="@id/tv2"
        app:layout_constraintTop_toBottomOf="@id/tv2" />

    <EditText
        android:id="@+id/rect2v"
        android:layout_width="217dp"
        android:layout_height="@dimen/dp_50"
        android:layout_marginLeft="@dimen/dp_10"
        android:background="@drawable/rectangle"
        android:drawableRight="@drawable/ic_padlock"
        android:maxLength="10"
        android:paddingLeft="@dimen/dp_10"
        android:paddingTop="@dimen/dp_15"
        android:paddingRight="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_15"
        app:layout_constraintLeft_toRightOf="@id/rect1"
        app:layout_constraintTop_toTopOf="@id/rect1" />

    <TextView
        android:id="@+id/tvNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_35"
        android:layout_marginTop="@dimen/dp_25"
        android:text="@string/note"
        android:textColor="@color/blacklight"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rect1" />

    <TextView
        android:id="@+id/tvtextnote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notetext"
        app:layout_constraintLeft_toRightOf="@id/tvNote"
        app:layout_constraintTop_toTopOf="@id/tvNote" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_2"
        android:text="@string/noteletter2"
        app:layout_constraintLeft_toLeftOf="@id/tvNote"
        app:layout_constraintTop_toBottomOf="@id/tvNote" />

    <Button
        android:id="@+id/btnEnterphno"
        android:layout_width="328dp"
        android:layout_height="@dimen/dp_50"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rectangle_bg"
        android:text="Next"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.981" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="111dp" />

</androidx.constraintlayout.widget.ConstraintLayout>