<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".uploadPhotoToIntroduce">
    <ImageView
        android:id="@+id/iVIntroduceYr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@drawable/ic_backblue_"
        android:layout_marginTop="@dimen/dp_35"
        android:layout_marginLeft="@dimen/dp_25"/>
    <TextView
        android:id="@+id/TVUpload1"
        android:textSize="@dimen/sp_25"
        android:layout_marginLeft="@dimen/dp_35"
        android:layout_marginRight="@dimen/dp_35"
        android:layout_marginTop="@dimen/dp_25"

        android:layout_width="match_parent"
        android:textColor="@color/blacklight"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iVIntroduceYr"
        app:layout_constraintLeft_toRightOf="@id/iVIntroduceYr"
        android:text="@string/upload_text"/>
    <TextView
        android:id="@+id/TvUpload2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_100"
        app:layout_constraintTop_toBottomOf="@id/TVUpload1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="@dimen/dp_35"
        android:background="@drawable/rectangle"
        android:backgroundTint="@color/verLightblu"
        android:text="@string/upload_text2"
      android:paddingLeft="@dimen/dp_70"
        android:textColor="@color/blacklight"
        android:paddingTop="@dimen/dp_25"
        android:textSize="@dimen/sp_18"/>
    <ImageView

        android:layout_width="@dimen/dp_30"
        android:layout_height="@dimen/dp_30"
        app:layout_constraintTop_toTopOf="@id/TvUpload2"
        app:layout_constraintLeft_toLeftOf="@id/TvUpload2"
        android:src="@drawable/tickmark"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_30"/>
    <TextView
        android:id="@+id/TvUpload3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_100"
        app:layout_constraintTop_toBottomOf="@id/TvUpload2"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="@dimen/dp_35"
        android:background="@drawable/rectangle"
        android:backgroundTint="@color/verLightblu"
        android:text="@string/upload_text3"
        android:paddingLeft="@dimen/dp_70"
        android:textColor="@color/blacklight"
        android:paddingTop="@dimen/dp_25"
        android:textSize="@dimen/sp_18"/>
    <ImageView

        android:layout_width="@dimen/dp_30"
        android:layout_height="@dimen/dp_30"
        app:layout_constraintTop_toTopOf="@id/TvUpload3"
        app:layout_constraintLeft_toLeftOf="@id/TvUpload3"
        android:src="@drawable/tickmark"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_30"/>
    <TextView
        android:id="@+id/TvUpload4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_100"
        app:layout_constraintTop_toBottomOf="@id/TvUpload3"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="@dimen/dp_35"
        android:background="@drawable/rectangle"
        android:backgroundTint="@color/veryLightRed"
        android:text="@string/upload_text4"
        android:paddingLeft="@dimen/dp_70"
        android:textColor="@color/blacklight"
        android:paddingTop="@dimen/dp_25"
        android:textSize="@dimen/sp_18"/>
    <ImageView

        android:layout_width="@dimen/dp_30"
        android:layout_height="@dimen/dp_30"
        app:layout_constraintTop_toTopOf="@id/TvUpload4"
        app:layout_constraintLeft_toLeftOf="@id/TvUpload4"
        android:src="@drawable/crossMark"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_30"/>
    <Button
        android:id="@+id/BtnIntroduce"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/rectanglebutton"
        android:backgroundTint="@color/appBlue"
        android:layout_margin="@dimen/dp_25"
        android:text="@string/next"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_20"/>





</androidx.constraintlayout.widget.ConstraintLayout>