<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HeightInput">

    <ImageView
        android:id="@+id/backfromHeight"
        android:layout_width="21dp"
        android:layout_height="12dp"
        android:layout_marginLeft="@dimen/dp_35"
        android:layout_marginTop="@dimen/dp_50"
        android:src="@drawable/ic_backblue_"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/Tvtall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_31"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dp_35"
        app:layout_constraintLeft_toRightOf="@id/backfromHeight"


        app:layout_constraintTop_toBottomOf="@id/backfromHeight"
        android:text="@string/how_tall_are_you"/>
    <Button
        android:textAllCaps="false"
        android:id="@+id/height1"
        android:textStyle="italic"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_50"
        app:layout_constraintTop_toBottomOf="@id/Tvtall"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/_167cm"
        android:textSize="@dimen/sp_25"
        android:gravity="center"/>
    <View
        android:id="@+id/V1height"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_2"
        android:layout_margin="@dimen/dp_25"
        android:background="@color/light"
        app:layout_constraintTop_toBottomOf="@id/height1"/>
    <Button
        android:id="@+id/height2"
        android:textAllCaps="false"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_35"
        app:layout_constraintTop_toBottomOf="@id/V1height"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="168cm"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_25"
        android:gravity="center"/>
    <View
        android:id="@+id/V2height"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_2"
        android:layout_margin="@dimen/dp_25"
        android:background="@color/light"
        app:layout_constraintTop_toBottomOf="@id/height2"/>
    <Button
        android:background="@android:color/transparent"
        android:textAllCaps="false"
        android:id="@+id/height3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_35"
        app:layout_constraintTop_toBottomOf="@id/V2height"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/_169cm"
android:textStyle="italic"
        android:textSize="@dimen/sp_25"
        android:gravity="center"/>
    <View
        android:id="@+id/V3height"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_2"
        android:layout_margin="@dimen/dp_25"
        android:background="@color/light"
        app:layout_constraintTop_toBottomOf="@id/height3"/>

    <Button
        android:id="@+id/tonextpage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:layout_margin="@dimen/dp_25"
        android:background="@drawable/rectanglebutton"
        android:backgroundTint="@color/appBlue"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="25dp" />




</androidx.constraintlayout.widget.ConstraintLayout>