<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cmbDaters">

    <ImageView
        android:id="@+id/backFromcmbDaters"
        android:layout_width="@dimen/dp_11"
        android:layout_height="@dimen/dp_18"
        android:layout_marginLeft="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_35"
        android:src="@drawable/ic_backblue_"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TVcmbDaters1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_35"
        android:text="@string/daters_Text"
        android:textColor="@color/blacklight"
        android:textSize="@dimen/sp_31"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/backFromcmbDaters"
        app:layout_constraintTop_toBottomOf="@id/backFromcmbDaters" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/TVcmbDaters1"
        app:layout_constraintRight_toRightOf="@id/TVcmbDaters1"
        android:src="@drawable/twohand"
        android:layout_marginRight="@dimen/dp_100"/>

    <TextView
        android:id="@+id/TVcmbDaters2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_35"
        android:layout_marginLeft="@dimen/dp_28"
        android:layout_marginTop="@dimen/dp_48"
        android:layout_marginEnd="@dimen/pd_32"
        android:layout_marginRight="@dimen/pd_32"
        android:layout_marginBottom="@dimen/dp_358"
        android:text="@string/daters_Text2"

        android:textSize="31sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/nextPageBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/TVcmbDaters1"
        app:layout_constraintTop_toBottomOf="@id/TVcmbDaters1"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/nextPageBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:layout_margin="@dimen/dp_25"
        android:background="@drawable/rectanglebutton"
        android:backgroundTint="@color/appBlue"
        android:text="@string/sounds_good"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_20"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="25dp" />






</androidx.constraintlayout.widget.ConstraintLayout>