<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".whatareYouLookingFor">
    <ImageView
        android:id="@+id/lookingimgview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@drawable/ic_backblue_"
        android:layout_marginTop="@dimen/dp_35"
        android:layout_marginLeft="@dimen/dp_20"/>
    <TextView
        android:id="@+id/Tvlooking1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_35"

        android:textColor="@color/blacklight"
        app:layout_constraintTop_toBottomOf="@id/lookingimgview"
        app:layout_constraintLeft_toRightOf="@id/lookingimgview"
        android:text="@string/lookingfor_text"
        android:textSize="@dimen/sp_30"/>

    <View
        android:id="@+id/loookingView1"

        android:layout_marginLeft="@dimen/dp_35"
        android:layout_marginRight="@dimen/dp_35"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/Tvlooking1"
        android:layout_marginTop="@dimen/dp_35"
        android:background="@color/light"/>
    <TextView
        android:id="@+id/Tvlooking2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/loookingView1"
        app:layout_constraintLeft_toLeftOf="@id/loookingView1"
        app:layout_constraintRight_toRightOf="@id/loookingView1"
        android:text="@string/marriage"
        android:textSize="@dimen/sp_20"
        android:layout_marginLeft="@dimen/dp_35"
        android:layout_marginRight="@dimen/dp_35"
        android:paddingTop="@dimen/dp_25"
        android:paddingBottom="@dimen/dp_25"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/circle"
        android:padding="@dimen/dp_15"
        android:layout_margin="@dimen/dp_25"
        app:layout_constraintRight_toRightOf="@id/Tvlooking2"
        app:layout_constraintTop_toTopOf="@id/Tvlooking2"/>
    <View
        android:id="@+id/loookingView2"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginLeft="@dimen/dp_35"
        android:layout_marginRight="@dimen/dp_35"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/Tvlooking2"

        android:background="@color/light"/>
    <TextView
        android:id="@+id/Tvlooking3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/loookingView2"
        app:layout_constraintLeft_toLeftOf="@id/loookingView1"
        app:layout_constraintRight_toRightOf="@id/loookingView1"
        android:text="@string/relationship"
        android:textSize="@dimen/sp_20"
        android:layout_marginLeft="@dimen/dp_35"
        android:layout_marginRight="@dimen/dp_35"
        android:paddingTop="@dimen/dp_25"
        android:paddingBottom="@dimen/dp_25"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/circle"
        android:padding="@dimen/dp_15"
        android:layout_margin="@dimen/dp_25"
        app:layout_constraintRight_toRightOf="@id/Tvlooking3"
        app:layout_constraintTop_toTopOf="@id/Tvlooking3"/>

    <View
        android:id="@+id/loookingView3"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginLeft="@dimen/dp_35"
        android:layout_marginRight="@dimen/dp_35"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/Tvlooking3"

        android:background="@color/light"/>
    <TextView
        android:id="@+id/Tvlooking4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/loookingView3"
        app:layout_constraintLeft_toLeftOf="@id/loookingView1"
        app:layout_constraintRight_toRightOf="@id/loookingView1"
        android:text="@string/casual"
        android:textSize="@dimen/sp_20"
        android:layout_marginLeft="@dimen/dp_35"
        android:layout_marginRight="@dimen/dp_35"
        android:paddingTop="@dimen/dp_25"
        android:paddingBottom="@dimen/dp_25"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/circle"
        android:padding="@dimen/dp_15"
        android:layout_margin="@dimen/dp_25"
        app:layout_constraintRight_toRightOf="@id/Tvlooking4"
        app:layout_constraintTop_toTopOf="@id/Tvlooking4"/>
    <View
        android:id="@+id/loookingView4"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginLeft="@dimen/dp_35"
        android:layout_marginRight="@dimen/dp_35"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/Tvlooking4"

        android:background="@color/light"/>
    <TextView
        android:id="@+id/Tvlooking5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/loookingView4"
        app:layout_constraintLeft_toLeftOf="@id/loookingView1"
        app:layout_constraintRight_toRightOf="@id/loookingView1"
        android:text="@string/notsur"
        android:textSize="@dimen/sp_20"
        android:layout_marginLeft="@dimen/dp_35"
        android:layout_marginRight="@dimen/dp_35"
        android:paddingTop="@dimen/dp_25"
        android:paddingBottom="@dimen/dp_25"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/circle"
        android:padding="@dimen/dp_15"
        android:layout_margin="@dimen/dp_25"
        app:layout_constraintRight_toRightOf="@id/Tvlooking5"
        app:layout_constraintTop_toTopOf="@id/Tvlooking5"/>
    <View
        android:id="@+id/loookingView5"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginLeft="@dimen/dp_35"
        android:layout_marginRight="@dimen/dp_35"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/Tvlooking5"

        android:background="@color/light"/>
    <Button
        android:id="@+id/BtnCMB"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/rectanglebutton"
        android:backgroundTint="@color/tinygrey"
        android:layout_margin="@dimen/dp_25"
        android:text="Next"
        android:textColor="@color/darkgrey"
        android:textSize="@dimen/sp_20"/>







</androidx.constraintlayout.widget.ConstraintLayout>